--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,8 +23,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Andrew Roska</h1>
+							<p>Software Engineer</p>
 						</div>
 
 					<!-- Nav -->
@@ -62,14 +62,12 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Andrew</strong>, but my friends call me Roket. </h2>
+								<p>I am a Software Engineer and currently a student at Code Fellows in Seattle, WA.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">See what I've made!</a>
 							</footer>
 
 						</div>
@@ -83,37 +81,34 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>I am currently excited about learning jQuery and advancing my skills in JavaScript.  I love working on logic and solving the mental puzzles that are involved.  Keeping my logic orderly and easy to read is one of the things that holds my attention and keeps me constantly returning to my code.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://var-i-team.github.io/RPS/" target="_blank" class="image fit"><img src="images/RPS.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Rock, Paper, Scissors</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Placeholder</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://roketsu86.github.io/busmall/" target="_blank" class="image fit"><img src="images/busmall.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Busmall</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://roketsu86.github.io/cookie-stand/" target="_blank" class="image fit"><img src="images/salmon-cookies.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Salmon Cookies</h3>
 										</header>
 									</article>
 								</div>
@@ -121,13 +116,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Placeholder</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://roketsu86.github.io/About-Me/" target="_blank" class="image fit"><img src="images/about-me.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>About Me</h3>
 										</header>
 									</article>
 								</div>
@@ -144,7 +139,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/electronics-banner.jpg" alt="" /></a>
 
 							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
