--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -141,12 +141,9 @@
 
 							<a href="#" class="image featured"><img src="images/electronics-banner.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+              <p>I am a Software Engineer with a background in Customer Service and Sales.  I have spent most of my life with computers and have always been fascinated by both the software and hardware aspects of them.  I originally thought I would like to make a career out of the physical aspects of computer networking, but while in school I discovered my true passion is solving the logical problems that came with writting the code to make everything work.</br>
+              I bring with me a Customer-first attitude, and have spent many years learning how to communicate with customers to discover the root problem the are trying to solve.  I can think outside the box and put myself in other's shoes, which allows me to find the best and most effecient way to reach everyone's goals.</br>
+              I enjoy playing video games and have since I was 5 years old.  My primary genres are puzzle and RPG games, and I can convert the skills needed to be good at those games into an ability to work through problems quickly and effectively.  My dream is to one day be able to contribute to a game or series that I would have played even if I weren't in the industry.</p>
 
 						</div>
 					</section>
