--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<ul class="icons">
 							<li><a href="https://github.com/Roketsu86" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/andrew-roska/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto: andrew.l.roska2@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#contact" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -57,6 +57,7 @@
 
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
+            
 						<div class="container">
 
 							<header>
@@ -76,7 +77,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<a href="#" class="image featured"><img src="images/projects.jpg" /></a>
 							</header>
 
 							<p>I am currently excited about learning jQuery and advancing my skills in JavaScript.  I love working on logic and solving the mental puzzles that are involved.  Keeping my logic orderly and easy to read is one of the things that holds my attention and keeps me constantly returning to my code.</p>
@@ -90,7 +91,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>Placeholder</h3>
 										</header>
@@ -112,7 +113,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Placeholder</h3>
 										</header>
@@ -134,10 +135,10 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<a href="#" class="image featured"><img src="images/about.jpg" /></a>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/electronics-banner.jpg" alt="" /></a>
+							<!-- <a href="#" class="image featured"><img src="images/electronics-banner.jpg" alt="" /></a> -->
 
               <p>I am a Software Engineer with a background in Customer Service and Sales.  I have spent most of my life with computers and have always been fascinated by both the software and hardware aspects of them.  I originally thought I would like to make a career out of the physical aspects of computer networking, but while in school I discovered my true passion is solving the logical problems that came with writting the code to make everything work.</br>
               I bring with me a Customer-first attitude, and have spent many years learning how to communicate with customers to discover the root problem the are trying to solve.  I can think outside the box and put myself in other's shoes, which allows me to find the best and most effecient way to reach everyone's goals.</br>
@@ -151,13 +152,10 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<a href="#" class="image featured"><img src="images/contact.jpg" /></a>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>I'd love to get in touch with you!  Please drop me a comment bellow, and I'll get back to you as soon as I can!</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -188,8 +186,8 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
