Adds movie header

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 						<div class="container">
 
 							<header>
+                <video autoplay loop muted>
+                  <source src="assets/video/Love-Coding.mp4" type="video/mp4" />
+                </video>
 								<h2 class="alt">Hi! I'm <strong>Andrew</strong>, but my friends call me Roket. </h2>
 								<p>I am a Software Engineer and currently a student at Code Fellows in Seattle, WA.</p>
 							</header>
